--- a/packages/lib/locales/de_DE.json
+++ b/packages/lib/locales/de_DE.json
@@ -79,6 +79,7 @@
  "Authentication was not completed (did not receive an authentication token).": "Authentifizierung wurde nicht abgeschlossen (keinen Authentifizierung-Token erhalten).",
  "Authorisation token:": "Berechtigungstoken:",
  "Auto": "Automatisch",
+ "Auto-add disabled accounts for deletion": "Automatisches Hinzufügen deaktivierter Accounts zur Löschliste",
  "Auto-pair braces, parenthesis, quotations, etc.": "Automatisches Hinzufügen von geschweiften Klammern, runden Klammern, Anführungszeichen usw.",
  "Automatically check for updates": "Automatisch auf Aktualisierungen prüfen",
  "Automatically switch theme to match system theme": "Automatisch das Design ändern, um es dem System-Design anzupassen",
@@ -373,6 +374,7 @@
  "Idle": "Wartend",
  "Ignore": "Ignorieren",
  "Ignore TLS certificate errors": "TLS-Zertifikatfehler ignorieren",
+ "Images": "Bilder",
  "Import": "Importieren",
  "Importing from \"%s\" as \"%s\" format. Please wait...": "Aus „%s“ im Format „%s“ wird importiert. Bitte warten ...",
  "Importing notes...": "Notizen werden importiert ...",
@@ -552,6 +554,7 @@
  "Operation cancelled": "Vorgang abgebrochen",
  "Options": "Optionen",
  "Or create an account.": "Oder erstelle ein Konto.",
+ "Other applications...": "Andere Anwendungen...",
  "Output format: %s": "Ausgabeformat: %s",
  "Page orientation for PDF export": "Seitenausrichtung für den PDF-Export",
  "Page size for PDF export": "Seitengröße für den PDF-Export",
@@ -564,7 +567,6 @@
  "PDF File": "PDF-Datei",
  "Permission needed": "Berechtigung benötigt",
  "Permission to use camera": "Berechtigung zur Verwendung der Kamera",
- "Please click on \"%s\" to proceed": "Klicke bitte auf \"%s\" um fortzufahren",
  "Please confirm that you would like to re-encrypt your complete database.": "Bitte bestätige, dass du deine gesamte Datenbank neu verschlüsseln möchtest.",
  "Please enter your password in the master key list below before upgrading the key.": "Bitte gib zuerst dein Passwort in der unten stehenden Liste der Hauptschlüssel ein, bevor du den Schlüssel aktualisierst.",
  "Please note that if it is a large notebook, it may take a few minutes for all the notes to show up on the recipient's device.": "Wenn das Notizbuch sehr groß ist, kann es ein paar Minuten dauern, bis alle Notizen auf dem Empfängergerät erscheinen.",
@@ -659,6 +661,8 @@
  "See the pre-release page for more details: %s": "Weitere Informationen findest Du auf der Vorabversionsseite: %s",
  "Select": "Auswählen",
  "Select all": "Alles auswählen",
+ "Select emoji...": "Emoji auswählen...",
+ "Select file...": "Datei auswählen...",
  "Server is already running on port %d": "Server läuft bereits auf Port %d",
  "Server is not running.": "Server läuft nicht.",
  "Server is running on port %d": "Server läuft auf Port %d",
@@ -901,7 +905,6 @@
  "You may use the tool below to re-encrypt your data, for example if you know that some of your notes are encrypted with an obsolete encryption method.": "Du kannst das folgende Werkzeug verwenden, um deine Daten erneut zu verschlüsseln, falls einige deiner Notizen mit einer veralteten Verschlüsselungsmethode verschlüsselt sein sollten.",
  "Your choice: ": "Deine Auswahl: ",
  "Your data is going to be re-encrypted and synced again.": "Deine Daten werden neu verschlüsselt und erneut synchronisiert.",
- "Your master password is needed to decrypt some of your data.": "Dein Master-Passwort ist nötig um einige deiner Daten zu entschlüsseln.",
  "Your password is needed to decrypt some of your data. Type `:e2ee decrypt` to set it.": "Dein Passwort ist nötig um einige deiner Daten zu entschlüsseln. Tippe „:e2ee decrypt“ um es zu setzen.",
  "Your permission to use your camera is required.": "Deine Zustimmung zur Verwendung deiner Kamera ist erforderlich.",
  "Your version: %s": "Deine Version: %s",
