--- a/packages/lib/locales/ja_JP.json
+++ b/packages/lib/locales/ja_JP.json
@@ -51,6 +51,8 @@
  "Add recipient:": "受信者を追加:",
  "Add title": "題名を追加",
  "Add to dictionary": "辞書に追加",
+ "Admin": "管理者",
+ "Admin dashboard": "管理者ダッシュボード",
  "Advanced options": "詳細な設定",
  "Advanced tools": "高度なツール",
  "All notes": "すべてのノート",
@@ -77,7 +79,9 @@
  "Authentication was not completed (did not receive an authentication token).": "認証は完了していません(認証トークンが得られませんでした)",
  "Authorisation token:": "認証トークン:",
  "Auto": "自動",
+ "Auto-add disabled accounts for deletion": "無効アカウントを削除に自動追加",
  "Auto-pair braces, parenthesis, quotations, etc.": "始めの括弧や引用符入力時に終わりの括弧や引用符を自動入力する。",
+ "Automatically check for updates": "アップデートを自動的に確認する",
  "Automatically switch theme to match system theme": "システムのテーマにあわせて自動設定",
  "Back": "戻る",
  "Bold": "太字",
@@ -132,6 +136,7 @@
  "Completed": "完了",
  "Completed decryption.": "復号が完了しました。",
  "Completed: %s (%s)": "完了: %s (%s)",
+ "Compress old changes": "古い変更を圧縮する",
  "Configuration": "設定",
  "Confirm password cannot be empty": "パスワード(確認用)は空にできません",
  "Confirm password:": "パスワード(確認用):",
@@ -145,6 +150,7 @@
  "Copy": "コピー",
  "Copy dev mode command to clipboard": "開発モードコマンドをクリップボードにコピー",
  "Copy external link": "外部リンクをコピー",
+ "Copy image": "画像のコピー",
  "Copy Link Address": "リンクアドレスをコピー",
  "Copy Markdown link": "Markdownのリンクをコピー",
  "Copy path to clipboard": "クリップボードにパスを保存",
@@ -159,6 +165,8 @@
  "Could not upgrade master key: %s": "マスターキーをアップグレードできませんでした: %s",
  "Could not verify the share status of this notebook - aborting. Please try again when you are connected to the internet.": "このノートブックの共有状態を確認できなかったため処理を中断します。インターネット接続を確認してから再度お試しください。",
  "Create a notebook": "ノートブックを作成します",
+ "Create notebook": "ノートブックの作成",
+ "Create user": "ユーザーを作成",
  "Created": "作成日時",
  "created date": "作成日",
  "Created local items: %d.": "ローカルアイテムの作成: %d.",
@@ -180,6 +188,7 @@
  "Custom TLS certificates": "TLS証明書のカスタマイズ",
  "Cut": "切り取り",
  "Dark": "暗い",
+ "Dashboard": "ダッシュボード",
  "Database v%s": "データベース v%s",
  "Date": "日時",
  "Date format": "日付の形式",
@@ -191,6 +200,8 @@
  "Default: %s": "既定値: %s",
  "Delete": "削除",
  "Delete attachment \"%s\"?": "添付ファイル \"%s\" を削除しますか？",
+ "Delete expired sessions": "期限切れセッションを削除",
+ "Delete expired tokens": "期限切れトークンを削除",
  "Delete line": "行を削除",
  "Delete local data and re-download from sync target": "ローカルデータを削除して同期先から再ダウンロードする",
  "Delete note \"%s\"?": "ノート \"%s\" を削除しますか？",
@@ -255,6 +266,8 @@
  "Editor monospace font family": "エディターの等幅フォントファミリー",
  "Either \"text\" or \"json\"": "\"text\"または\"json\"",
  "Emacs": "Emacs",
+ "Email": "Eメール",
+ "Emails": "Eメール",
  "emphasised text": "強調したいテキスト",
  "Enable": "有効",
  "Enable ++insert++ syntax": "++追加++構文を有効にする",
@@ -331,6 +344,7 @@
  "For information on how to customise the shortcuts please visit %s": "ショートカットのカスタマイズ方法は %s をご覧ください",
  "For more information about End-To-End Encryption (E2EE) and advice on how to enable it please check the documentation:": "エンドツーエンド暗号化(E2EE)に関する詳細な情報と有効化の手順については、次のドキュメントをご覧ください:",
  "For the list of keyboard shortcuts and config options, type `help keymap`": "キーボードショートカットと設定オプションを表示するには、`help shortcuts`と入力してください",
+ "Force path style": "パス形式を強制する",
  "Forward": "進む",
  "Found: %d.": "総数: %d.",
  "FTS enabled: %d": "FTS有効:  %d",
@@ -350,6 +364,7 @@
  "Hide disabled keys": "無効化したキーを表示しない",
  "Hide Joplin": "Joplinを隠す",
  "Highlight": "ハイライト",
+ "Home": "ホーム",
  "Horizontal Rule": "横線",
  "HTML Directory": "HTMLディレクトリ",
  "HTML File": "HTMLファイル",
@@ -359,6 +374,7 @@
  "Idle": "待機中",
  "Ignore": "無視",
  "Ignore TLS certificate errors": "TLS証明書のエラーを無視",
+ "Images": "画像",
  "Import": "インポート",
  "Importing from \"%s\" as \"%s\" format. Please wait...": "\"%s\" を \"%s\" フォーマットとしてインポート中。しばらくお待ちください...",
  "Importing notes...": "ノートのインポート中...",
@@ -390,6 +406,7 @@
  "Invalid password": "無効なパスワード",
  "Italic": "斜体",
  "Item \"%s\" could not be downloaded: %s": "アイテム \"%s\" はダウンロードできませんでした：%s",
+ "Items": "アイテム",
  "Items that cannot be decrypted": "復号ができなかったアイテム",
  "Items that cannot be synchronised": "同期ができなかったアイテム",
  "Joplin can synchronise your notes using various providers. Select one from the list below.": "Joplinではノートの同期先としてさまざまなクラウドプロバイダーを利用できます。下の一覧から1つお選びください。",
@@ -435,6 +452,8 @@
  "Login below.": "以下からログイン。",
  "Login with Dropbox": "Dropboxでログイン",
  "Login with OneDrive": "OneDriveログイン",
+ "Logout": "ログアウト",
+ "Logs": "ログ",
  "Make a donation": "寄付する",
  "Manage master password": "マスターパスワードの管理",
  "Manage master password...": "マスターパスワードの管理...",
@@ -535,6 +554,7 @@
  "Operation cancelled": "操作をキャンセルしました",
  "Options": "オプション",
  "Or create an account.": "またはアカウントを作成。",
+ "Other applications...": "その他のアプリケーション...",
  "Output format: %s": "出力フォーマット: %s",
  "Page orientation for PDF export": "PDFページの向き",
  "Page size for PDF export": "エクスポートするPDFのページサイズ",
@@ -547,7 +567,6 @@
  "PDF File": "PDF ファイル",
  "Permission needed": "許可が必要",
  "Permission to use camera": "カメラ使用の許可",
- "Please click on \"%s\" to proceed": "続行するには \"%s\" をクリックしてください",
  "Please confirm that you would like to re-encrypt your complete database.": "データベース全体を暗号化しなおしてもよろしいですか。",
  "Please enter your password in the master key list below before upgrading the key.": "下記マスターキーをアップグレードするには、マスターキーのパスワードを入力してください。",
  "Please note that if it is a large notebook, it may take a few minutes for all the notes to show up on the recipient's device.": "ノートブックに大量のノートが含まれる場合、受信者側にすべてのノートが見えるようになるまで数分かかることがあります。",
@@ -576,6 +595,10 @@
  "Previous versions of this note": "このノートの以前のバージョン",
  "Print": "印刷",
  "Privacy Policy": "プライバシーポリシー",
+ "Process failed payment subscriptions": "サブスクリプションの支払い処理に失敗しました",
+ "Process oversized accounts": "容量オーバーのアカウントを処理する",
+ "Process user deletions": "ユーザー削除を実施する",
+ "Profile": "プロファイル",
  "Profile Version: %s": "プロファイルバージョン: %s",
  "Properties": "プロパティ",
  "Public-private key pair:": "公開鍵・秘密鍵ペア:",
@@ -617,6 +640,11 @@
  "Revision: %s (%s)": "リビジョン: %s (%s)",
  "Runs the commands contained in the text file. There should be one command per line.": "テキストファイルに含まれるコマンドを実行します。テキストファイルには1行1コマンドで記述する必要があります。",
  "S3": "S3",
+ "S3 access key": "S3 アクセスキー",
+ "S3 bucket": "S3 バケット",
+ "S3 region": "S3 リージョン",
+ "S3 secret key": "S3 シークレットアクセスキー",
+ "S3 URL": "S3 URL",
  "Safe mode is currently active. Note rendering and all plugins are temporarily disabled.": "セーフモードで実行中。ノートのレンダリングとすべてのプラグインを一時的に無効化しています。",
  "Save": "保存",
  "Save alarm": "アラームの保存",
@@ -633,6 +661,8 @@
  "See the pre-release page for more details: %s": "詳細についてはプレリリースページを参照してください: %s",
  "Select": "選択",
  "Select all": "すべて選択",
+ "Select emoji...": "絵文字の選択...",
+ "Select file...": "ファイルの選択...",
  "Server is already running on port %d": "サーバーはすでにポート %d で実行中です",
  "Server is not running.": "サーバーは実行されていません。",
  "Server is running on port %d": "サーバーはポート %d で実行中です",
@@ -722,6 +752,7 @@
  "Tagged: %d.": "タグ付き: %d.",
  "Tags": "タグ",
  "Take photo": "写真を撮影する",
+ "Tasks": "タスク",
  "Text editor command": "テキストエディターのコマンド",
  "Thank you! Your Joplin Cloud account is now setup and ready to use.": "ありがとうございます! Joplin Cloudアカウントのセットアップが完了し、利用できる状態になりました。",
  "The app is now going to close. Please relaunch it to complete the process.": "まもなくアプリケーションは終了します。もう一度起動して処理を完了させてください。",
@@ -781,7 +812,7 @@
  "title": "題名",
  "Title": "題名",
  "To allow Joplin to synchronise with Dropbox, please follow the steps below:": "DropboxでJoplinを同期する場合は、次のステップを実行してください:",
- "To continue, please enter your master password below.": "続行するには、マスターパスワードを入力してください",
+ "To continue, please enter your master password below.": "続行するには、マスターパスワードを入力してください。",
  "To delete a tag, untag the associated notes.": "タグを削除するには、関連するノートからタグを外してください。",
  "To delete: %d": "削除予定: %d",
  "To enter command line mode, press \":\"": "コマンドラインモードに入るには、\":\"を入力してください",
@@ -822,6 +853,8 @@
  "Unsupported link or message: %s": "次のリンクまたはメッセージはサポートしていません: %s",
  "Untitled": "名称未設定",
  "Update": "アップデート",
+ "Update profile": "プロファイルの更新",
+ "Update total sizes": "総容量を更新する",
  "Updated": "アップデート日時",
  "updated date": "アップデート日",
  "Updated local items: %d.": "ローカルアイテムの更新: %d.",
@@ -841,6 +874,8 @@
  "Use this to rebuild the search index if there is a problem with search. It may take a long time depending on the number of notes.": "検索に問題がある場合は、これを利用して検索インデックスの再構築を行います。ノートの数に依存して、時間がかかる場合があります。",
  "Used for most text in the markdown editor. If not found, a generic proportional (variable width) font is used.": "Markdownエディター上の大部分のテキストに使用。指定フォントが見つからない場合は一般的なプロポーショナル（可変幅）フォントを使用します。",
  "Used where a fixed width font is needed to lay out text legibly (e.g. tables, checkboxes, code). If not found, a generic monospace (fixed width) font is used.": "表、チェックボックス、コードなど、等幅フォントのほうが読みやすい場所に使用。指定フォントが見つからない場合は一般的な等幅フォントを使用します。",
+ "User deletions": "ユーザー削除",
+ "Users": "ユーザー",
  "Valid": "正当性",
  "View": "表示",
  "View on map": "地図上に表示",
@@ -870,7 +905,6 @@
  "You may use the tool below to re-encrypt your data, for example if you know that some of your notes are encrypted with an obsolete encryption method.": "ここでは既存データの再暗号化を行えます。たとえば、旧式のアルゴリズムで暗号化されたノートがあるとわかっているような場合に新しいアルゴリズムで暗号化しなおすことが可能です。",
  "Your choice: ": "選択： ",
  "Your data is going to be re-encrypted and synced again.": "既存データを暗号化しなおし、再同期します。",
- "Your master password is needed to decrypt some of your data.": "一部のデータを復号化するためにあなたのマスターパスワードが必要です。",
  "Your password is needed to decrypt some of your data. Type `:e2ee decrypt` to set it.": "一部のデータを復号化するためにあなたのパスワードが必要です。`:e2ee decrypt`と入力し設定してください。",
  "Your permission to use your camera is required.": "カメラを使用するには権限が必要です。",
  "Your version: %s": "あなたのバージョン: %s",
