--- a/packages/lib/locales/hr_HR.json
+++ b/packages/lib/locales/hr_HR.json
@@ -58,6 +58,7 @@
  "All notes": "Sve bilješke",
  "All potential ports are in use - please report the issue at %s": "Svi mogući priključci se koriste – prijavi problem na %s",
  "Also displays unset and hidden config variables.": "Također prikazuje nepostavljene i skrivene varijable konfiguracije.",
+ "Also publish linked notes": "Također objavi povezane bilješke",
  "Always": "Uvijek",
  "An update is available, do you want to download it now?": "Dostupna je nova verzija. Želiš li je sada preuzeti?",
  "Appearance": "Izgled",
@@ -164,7 +165,9 @@
  "Could not respond to the invitation. Please try again, or check with the notebook owner if they are still sharing it.\n\nThe error was: \"%s\"": "Neuspjelo odgovaranje na poziv. Pokušaj ponovo ili provjeri s vlasnikom prijenosnog računala je li ga još uvijek dijeli.\n\nGreška je bila: „% s”",
  "Could not upgrade master key: %s": "Neuspjela nadogradnja glavnog ključa: %s",
  "Could not verify the share status of this notebook - aborting. Please try again when you are connected to the internet.": "Neuspjela provjera stanja dijeljenja ove bilježnice – prekida se. Pokušaj ponovo kad uspostaviš vezu s internetom.",
+ "Create": "Stvori",
  "Create a notebook": "Stvori bilježnicu",
+ "Create new profile...": "Stvori novi profil …",
  "Create notebook": "Stvori bilježnicu",
  "Create user": "Stvori korisnika",
  "Created": "Stvoreno",
@@ -258,12 +261,14 @@
  "Edit in external editor": "Uredi u vanjskom uređivaču",
  "Edit note.": "Uredi bilješku.",
  "Edit notebook": "Uredi bilježnicu",
+ "Edit profile configuration...": "Uredi konfiguraciju profila …",
  "Editor": "Uređivač",
  "Editor font": "Font uređivača",
  "Editor font family": "Obitelj fontova uređivača",
  "Editor font size": "Veličina fonta uređivača",
  "Editor maximum width": "Maksimala širina uređivača",
  "Editor monospace font family": "Obitelj fontova fiksne širine uređivača",
+ "Editor: %s": "Uređivač: %s",
  "Either \"text\" or \"json\"": "„text” ili „json”",
  "Emacs": "Emacs",
  "Email": "E-mail",
@@ -333,6 +338,7 @@
  "Fetching resources: %d/%d": "Dohvaćanje resursa: %d/%d",
  "File": "Datoteka",
  "File system": "Datotečni sustav",
+ "Filter tags": "Filtriraj oznake",
  "Firefox Extension": "Firefox proširenje",
  "Fix search index": "Ispravi popis rezultata pretrage",
  "Fixing search index...": "Ispravljanje popisa rezultata pretrage …",
@@ -567,6 +573,7 @@
  "PDF File": "PDF datoteka",
  "Permission needed": "Potrebna je dozvola",
  "Permission to use camera": "Dozvola za korištenje kamere",
+ "Please click on \"%s\" to proceed, or set the passwords in the \"%s\" list below.": "Nastavi pritiskom na „%s” ili postavi lozinke u donjem popisu „%s”.",
  "Please confirm that you would like to re-encrypt your complete database.": "Potvrdi da želiš ponovo šifrirati tvoju cijelu bazu podataka.",
  "Please enter your password in the master key list below before upgrading the key.": "Upiši lozinku u donji popis glavnih ključeva prije nadograđivanja ključa.",
  "Please note that if it is a large notebook, it may take a few minutes for all the notes to show up on the recipient's device.": "Imaj na umu, da ako je velika bilježnica, može potrajati nekoliko minuta dok se sve bilješke pojave na uređaju primatelja.",
@@ -599,6 +606,7 @@
  "Process oversized accounts": "Obradi prevelike račune",
  "Process user deletions": "Obradi brisanja korisnika",
  "Profile": "Profil",
+ "Profile name:": "Ime profila:",
  "Profile Version: %s": "Verzija profila: %s",
  "Properties": "Svojstva",
  "Public-private key pair:": "Javno-privatan par ključa:",
@@ -648,6 +656,7 @@
  "Safe mode is currently active. Note rendering and all plugins are temporarily disabled.": "Trenutačno je aktivan sigurni modus. Prikaz bilježaka i svi dodaci privremeno su deaktivirani.",
  "Save": "Spremi",
  "Save alarm": "Spremi upozorenje",
+ "Save as %s": "Spremi kao %s",
  "Save as...": "Spremi kao …",
  "Save changes": "Spremi promjene",
  "Save geo-location with notes": "Spremi geografske podatke mjesta s bilješkama",
@@ -727,7 +736,9 @@
  "Swap line down": "Zamijeni s retkom ispod",
  "Swap line up": "Zamijeni s retkom iznad",
  "Switch between note and to-do type": "Promijeni u bilješku ili zadatak",
+ "Switch profile": "Promijeni profil",
  "Switch to note type": "Promijeni u bilješku",
+ "Switch to profile %d": "Promijeni u profil %d",
  "Switch to to-do type": "Promijeni u zadatak",
  "Switches to [notebook] - all further operations will happen within this notebook.": "Mijenja se u bilježnicu [notebook] – sve daljnje operacije izvode se u toj bilježnici.",
  "Sync Status": "Stanje sinkronizacije",
@@ -749,6 +760,7 @@
  "Synchronising...": "Sinkroniziranje …",
  "Synchronizing...": "Sinkroniziranje …",
  "Tabloid": "Tabloid",
+ "tag1, tag2, ...": "oznaka1, oznaka2, …",
  "Tagged: %d.": "Označeno: %d.",
  "Tags": "Oznake",
  "Take photo": "Snimi sliku",
@@ -756,6 +768,7 @@
  "Text editor command": "Naredba za uređivača teksta",
  "Thank you! Your Joplin Cloud account is now setup and ready to use.": "Hvala! Tvoj Joplin Cloud račun je sada postavljen i spreman za korištenje.",
  "The app is now going to close. Please relaunch it to complete the process.": "Program će se sada zatvoriti. Za završavanje postupka ponovo pokreni program.",
+ "The application did not close properly. Would you like to start in safe mode?": "Program se nije pravilno zatvorio. Želiš li početi u sigurnom načinu rada?",
  "The application has been authorised - you may now close this browser tab.": "Program je autoriziran – sada možeš zatvoriti karticu preglednika.",
  "The application has been authorised!": "Program je autoriziran!",
  "The application has been successfully authorised.": "Program je uspješno autoriziran.",
@@ -905,6 +918,7 @@
  "You may use the tool below to re-encrypt your data, for example if you know that some of your notes are encrypted with an obsolete encryption method.": "Za ponovno šifriranje tvojih podataka koristi dolje navedeni alat, na primjer kad znaš da su neke tvoje bilješke šifrirane zastarjelom metodom šifriranja.",
  "Your choice: ": "Tvoj izbor: ",
  "Your data is going to be re-encrypted and synced again.": "Tvoji će se podaci ponovo šifrirati i sinkronizirati.",
+ "Your password is needed to decrypt some of your data.": "Tvoja lozinka je potrebna za dešifriranje nekih tvojih podataka.",
  "Your password is needed to decrypt some of your data. Type `:e2ee decrypt` to set it.": "Tvoja lozinka je potrebna za dešifriranje nekih tvojih podataka. Za postavljanje utipkaj `:e2ee decrypt`.",
  "Your permission to use your camera is required.": "Za korištenje kamere potrebna je tvoja dozvola.",
  "Your version: %s": "Tvoja verzija: %s",
