--- a/packages/lib/locales/ja_JP.json
+++ b/packages/lib/locales/ja_JP.json
@@ -58,6 +58,7 @@
  "All notes": "すべてのノート",
  "All potential ports are in use - please report the issue at %s": "使用候補のポートはすべて利用中です - 問題を %s に報告してください",
  "Also displays unset and hidden config variables.": "未設定または非表示の設定項目も表示します。",
+ "Also publish linked notes": "リンクされたノートも公開する",
  "Always": "いつも",
  "An update is available, do you want to download it now?": "アップデートがあります。すぐにダウンロードしますか？",
  "Appearance": "スタイル",
@@ -75,7 +76,7 @@
  "Attachment download behaviour": "添付ファイルのダウンロードの動作",
  "Attachments": "添付ファイル",
  "Attachments that could not be downloaded": "ダウンロードできなかった添付ファイル",
- "Attention: If you change this location, make sure you copy all your content to it before syncing, otherwise all files will be removed! See the FAQ for more details: %s": "注意: この場所を変更する際は、同期する前に新しい場所にすべての内容をコピーしておきましょう。そうしないとすべてのファイルが削除されていまいます！ 詳しくは次のFAQをご覧ください: %s",
+ "Attention: If you change this location, make sure you copy all your content to it before syncing, otherwise all files will be removed! See the FAQ for more details: %s": "注意: この場所を変更する際は、同期する前に新しい場所にすべての内容をコピーしておきましょう。そうしないとすべてのファイルが削除されてしまいます！ 詳しくは次のFAQをご覧ください: %s",
  "Authentication was not completed (did not receive an authentication token).": "認証は完了していません(認証トークンが得られませんでした)",
  "Authorisation token:": "認証トークン:",
  "Auto": "自動",
@@ -92,15 +93,15 @@
  "Cancelling background synchronisation... Please wait.": "バックグラウンド同期を中止中… しばらくお待ちください。",
  "Cancelling...": "中止中...",
  "Cancelling... Please wait.": "中止中...お待ちください。",
- "Cannot access %s": "%sにアクセスできません",
+ "Cannot access %s": "%s にアクセスできません",
  "Cannot change encrypted item": "暗号化したアイテムは変更できません",
  "Cannot copy note to \"%s\" notebook": "ノートをノートブック \"%s\" にコピーできません",
- "Cannot find \"%s\".": "\"%s\"は見つかりませんでした。",
+ "Cannot find \"%s\".": "\"%s\" は見つかりませんでした。",
  "Cannot initialise synchroniser.": "同期プロセスを初期化できませんでした。",
- "Cannot load \"%s\" module for format \"%s\" and output \"%s\"": "\"%s\" モジュール （\"%s / %s\" フォーマット用） を読み込めません",
- "Cannot load \"%s\" module for format \"%s\" and target \"%s\"": "\"%s\" モジュール （\"%s / %s\" フォーマット用） を読み込めません",
+ "Cannot load \"%s\" module for format \"%s\" and output \"%s\"": "\"%s\" フォーマットと \"%s\" 出力用の \"%s\" モジュールを読み込めません",
+ "Cannot load \"%s\" module for format \"%s\" and target \"%s\"": "\"%s\" フォーマットと\" %s\" ターゲット用の \"%s\" モジュールを読み込めません",
  "Cannot move note to \"%s\" notebook": "ノートをノートブック \"%s\" に移動できません",
- "Cannot move notebook to this location": "ノートをノートブック \"%s\" に移動できません",
+ "Cannot move notebook to this location": "ノートブックをこの場所に移動できません",
  "Cannot refresh token: authentication data is missing. Starting the synchronisation again may fix the problem.": "トークンの更新ができませんでした。認証データがありません。同期を再度行うことで解決することがあります。",
  "Cannot save %s \"%s\" because it is larger than the allowed limit (%s)": "%s \"%s\" を保存できません。サイズが上限 (%s) を超えるためです",
  "Cannot save %s \"%s\" because it would go over the total allowed size (%s) for this account": "%s \"%s\" を保存できません。このアカウントに許可された合計サイズの上限 (%s) を超えるためです",
@@ -164,7 +165,9 @@
  "Could not respond to the invitation. Please try again, or check with the notebook owner if they are still sharing it.\n\nThe error was: \"%s\"": "招待に応じることができませんでした。もう一度お試しいただくか、ノートブックの所有者に今でも共有を続けているかご確認ください。\n\nエラーの内容: \"%s\"",
  "Could not upgrade master key: %s": "マスターキーをアップグレードできませんでした: %s",
  "Could not verify the share status of this notebook - aborting. Please try again when you are connected to the internet.": "このノートブックの共有状態を確認できなかったため処理を中断します。インターネット接続を確認してから再度お試しください。",
+ "Create": "作成",
  "Create a notebook": "ノートブックを作成します",
+ "Create new profile...": "あたらしいプロファイルを作成...",
  "Create notebook": "ノートブックの作成",
  "Create user": "ユーザーを作成",
  "Created": "作成日時",
@@ -209,7 +212,7 @@
  "Delete notebook \"%s\"?\n\nAll notes and sub-notebooks within this notebook will also be deleted.": "ノートブック \"%s\" を削除しますか？\n\nこのノートブックにあるノートとサブノートはすべて消えてしまいます。",
  "Delete notebook? All notes and sub-notebooks within this notebook will also be deleted.": "ノートブックを削除しますか？　このノートブックにあるノートとサブノートはすべて消えてしまいます。",
  "Delete plugin \"%s\"?": "プラグイン \"%s\" を削除しますか？",
- "Delete these %d notes?": "ノート \"%d\" を削除しますか？",
+ "Delete these %d notes?": "これら %d のノートを削除しますか？",
  "Delete this invitation? The recipient will no longer have access to this shared notebook.": "この招待を削除しますか? 削除後は招待の受信者がこの共有ノートブックにアクセスできなくなります。",
  "Deleted local items: %d.": "ローカルアイテムの削除: %d.",
  "Deleted remote items: %d.": "リモートアイテムの削除: %d.",
@@ -258,12 +261,14 @@
  "Edit in external editor": "外部エディターで編集",
  "Edit note.": "ノートを編集する。",
  "Edit notebook": "ノートブックの編集",
+ "Edit profile configuration...": "プロファイル設定を編集...",
  "Editor": "エディター",
  "Editor font": "エディターのフォント",
  "Editor font family": "エディターのフォントファミリー",
  "Editor font size": "エディターのフォントサイズ",
  "Editor maximum width": "エディター内での最大表示幅",
  "Editor monospace font family": "エディターの等幅フォントファミリー",
+ "Editor: %s": "エディター: %s",
  "Either \"text\" or \"json\"": "\"text\"または\"json\"",
  "Emacs": "Emacs",
  "Email": "Eメール",
@@ -333,6 +338,7 @@
  "Fetching resources: %d/%d": "取得中のリソース: %d/%d",
  "File": "ファイル",
  "File system": "ファイルシステム",
+ "Filter tags": "フィルタータグ",
  "Firefox Extension": "Firefox 拡張機能",
  "Fix search index": "検索インデックスの修正",
  "Fixing search index...": "検索インデックスの修正中...",
@@ -471,16 +477,16 @@
  "Max concurrent connections": "最大同時接続数",
  "Missing keys": "キーがありません",
  "Missing Master Keys": "マスターキーがありません",
- "Missing required argument: %s": "引数が足りません：%s",
+ "Missing required argument: %s": "引数が足りません: %s",
  "Mobile data - auto-sync disabled": "モバイルデータ通信 - 自動同期無効",
  "More info": "詳細情報",
  "More information": "詳細情報",
  "More than one item match \"%s\". Please narrow down your query.": "一つ以上のアイテムが\"%s\"に一致しました。クエリを絞るようにしてください。",
- "Move %d notes to notebook \"%s\"?": "%d個のノートを\"%s\"に移動しますか？",
+ "Move %d notes to notebook \"%s\"?": "%d 個のノートを \"%s\" ノートブックに移動しますか？",
  "Move to notebook": "ノートブックへ移動",
  "Move to notebook...": "ノートブックへ移動...",
  "Move to notebook:": "ノートブックへ移動:",
- "Moves the notes matching <note> to [notebook].": "<note>に一致するアイテムを、[notebook]に移動します。",
+ "Moves the notes matching <note> to [notebook].": "<note>に一致するノートを、[notebook]に移動します。",
  "n": "n",
  "N": "N",
  "New note": "新しいノート",
@@ -517,7 +523,7 @@
  "Note attachments": "添付ファイル一覧",
  "Note attachments...": "添付ファイル一覧...",
  "Note body": "ノートの本文",
- "Note does not exist: \"%s\". Create it?": "\"%s\"というノートはありません。作成しますか？",
+ "Note does not exist: \"%s\". Create it?": "\"%s\" というノートはありません。作成しますか？",
  "Note has been saved.": "ノートは保存されました。",
  "Note History": "ノートの履歴",
  "Note is not a to-do: \"%s\"": "ノートはToDoリストではありません：\"%s\"",
@@ -567,6 +573,7 @@
  "PDF File": "PDF ファイル",
  "Permission needed": "許可が必要",
  "Permission to use camera": "カメラ使用の許可",
+ "Please click on \"%s\" to proceed, or set the passwords in the \"%s\" list below.": "\"%s\"をクリックして続行するか、以下の\"%s\"リストでパスワードを設定してください。",
  "Please confirm that you would like to re-encrypt your complete database.": "データベース全体を暗号化しなおしてもよろしいですか。",
  "Please enter your password in the master key list below before upgrading the key.": "下記マスターキーをアップグレードするには、マスターキーのパスワードを入力してください。",
  "Please note that if it is a large notebook, it may take a few minutes for all the notes to show up on the recipient's device.": "ノートブックに大量のノートが含まれる場合、受信者側にすべてのノートが見えるようになるまで数分かかることがあります。",
@@ -599,6 +606,7 @@
  "Process oversized accounts": "容量オーバーのアカウントを処理する",
  "Process user deletions": "ユーザー削除を実施する",
  "Profile": "プロファイル",
+ "Profile name:": "プロファイル名:",
  "Profile Version: %s": "プロファイルバージョン: %s",
  "Properties": "プロパティ",
  "Public-private key pair:": "公開鍵・秘密鍵ペア:",
@@ -648,6 +656,7 @@
  "Safe mode is currently active. Note rendering and all plugins are temporarily disabled.": "セーフモードで実行中。ノートのレンダリングとすべてのプラグインを一時的に無効化しています。",
  "Save": "保存",
  "Save alarm": "アラームの保存",
+ "Save as %s": "%sで保存",
  "Save as...": "名前を付けて保存...",
  "Save changes": "変更を保存",
  "Save geo-location with notes": "ノートに位置情報を保存",
@@ -667,9 +676,9 @@
  "Server is not running.": "サーバーは実行されていません。",
  "Server is running on port %d": "サーバーはポート %d で実行中です",
  "Set alarm": "アラームをセット",
- "Set alarm:": "アラームをセット：",
+ "Set alarm:": "アラームをセット:",
  "Set it to 0 to make it take the complete available space. Recommended width is 600.": "幅いっぱいに表示させたいときは 0 に設定してください。推奨設定は 600 です。",
- "Set the password": "パスワードの設定",
+ "Set the password": "パスワードを設定",
  "Sets the property <name> of the given <note> to the given [value]. Possible properties are:\n\n%s": "<note>のプロパティ<name> を、指示された[value]に設定します。有効なプロパティは：\n\n%s",
  "Share": "共有",
  "Share Notebook": "ノートブックを共有",
@@ -690,9 +699,9 @@
  "Skipped: %d.": "スキップ: %d.",
  "Solarised Dark": "Solarised (暗)",
  "Solarised Light": "Solarised (明)",
- "Some items cannot be decrypted.": "いくつかの項目は復号されませんでした。",
- "Some items cannot be synchronised.": "いくつかの項目は同期されませんでした。",
- "Some items cannot be synchronised. Press for more info.": "いくつかの項目は同期されませんでした。詳細はクリック。",
+ "Some items cannot be decrypted.": "いくつかのアイテムは復号されませんでした。",
+ "Some items cannot be synchronised.": "いくつかのアイテムは同期されませんでした。",
+ "Some items cannot be synchronised. Press for more info.": "いくつかのアイテムは同期されませんでした。詳細はクリック。",
  "Sort notebooks by": "ノートブックのソート方法",
  "Sort notes by": "ノートのソート方法",
  "Sort selected lines": "選択行の並び替え",
@@ -727,7 +736,9 @@
  "Swap line down": "次の行と入れ替え",
  "Swap line up": "前の行と入れ替え",
  "Switch between note and to-do type": "ノートとToDoを切り替え",
+ "Switch profile": "プロファイルを切り替え",
  "Switch to note type": "ノートに切り替え",
+ "Switch to profile %d": "%d プロファイルに切り替え",
  "Switch to to-do type": "ToDoに切り替え",
  "Switches to [notebook] - all further operations will happen within this notebook.": "ノートブック [notebook]に切り替え - これ以降の作業は、指定のノートブック内で行われます。",
  "Sync Status": "同期の状態",
@@ -749,6 +760,7 @@
  "Synchronising...": "同期中...",
  "Synchronizing...": "同期中...",
  "Tabloid": "Tabloid",
+ "tag1, tag2, ...": "タグ1, タグ2, ...",
  "Tagged: %d.": "タグ付き: %d.",
  "Tags": "タグ",
  "Take photo": "写真を撮影する",
@@ -756,6 +768,7 @@
  "Text editor command": "テキストエディターのコマンド",
  "Thank you! Your Joplin Cloud account is now setup and ready to use.": "ありがとうございます! Joplin Cloudアカウントのセットアップが完了し、利用できる状態になりました。",
  "The app is now going to close. Please relaunch it to complete the process.": "まもなくアプリケーションは終了します。もう一度起動して処理を完了させてください。",
+ "The application did not close properly. Would you like to start in safe mode?": "アプリケーションが正しく閉じませんでした。セーフモードで開始しますか？",
  "The application has been authorised - you may now close this browser tab.": "アプリケーションは認証されました - ブラウザを閉じてもかまいません。",
  "The application has been authorised!": "アプリケーションは問題なく認証されました！",
  "The application has been successfully authorised.": "アプリケーションは問題なく認証されました。",
@@ -886,7 +899,7 @@
  "Warning: not all resources shown for performance reasons (limit: %s).": "注意: 性能上の理由により、リソースは最大 %s 件までしか表示されません。",
  "Web Clipper": "Webクリッパー",
  "WebDAV": "WebDAV",
- "WebDAV password": "WevDAV パスワード",
+ "WebDAV password": "WebDAV パスワード",
  "WebDAV URL": "WebDAV URL",
  "WebDAV username": "WebDAV ユーザー名",
  "Website and documentation": "Webサイトとドキュメント",
@@ -903,8 +916,9 @@
  "You do not have any installed plugin.": "インストールされているプラグインはありません。",
  "You may also type `status` for more information.": "`status`でさらに情報を確認できます。",
  "You may use the tool below to re-encrypt your data, for example if you know that some of your notes are encrypted with an obsolete encryption method.": "ここでは既存データの再暗号化を行えます。たとえば、旧式のアルゴリズムで暗号化されたノートがあるとわかっているような場合に新しいアルゴリズムで暗号化しなおすことが可能です。",
- "Your choice: ": "選択： ",
+ "Your choice: ": "選択: ",
  "Your data is going to be re-encrypted and synced again.": "既存データを暗号化しなおし、再同期します。",
+ "Your password is needed to decrypt some of your data.": "一部のデータを復号化するためにあなたのパスワードが必要です。",
  "Your password is needed to decrypt some of your data. Type `:e2ee decrypt` to set it.": "一部のデータを復号化するためにあなたのパスワードが必要です。`:e2ee decrypt`と入力し設定してください。",
  "Your permission to use your camera is required.": "カメラを使用するには権限が必要です。",
  "Your version: %s": "あなたのバージョン: %s",
